attempt fix for slate js jumping cursor problem

--- a/src/_resources/scss/app.scss
+++ b/src/_resources/scss/app.scss
@@ -25,6 +25,10 @@
 //   text-transform: none !important;
 // }
 
+[data-slate-editor] {
+  -webkit-user-modify: read-write !important;
+}
+
 .relative {
   position: relative;
 }
